--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 #First Clone from Google Cloud Source Repository  
 - name: 'gcr.io/cloud-builders/git'
-  args: ['clone','https://github.com/ashutosh19021993/p/${_PROJECT}/r/${_REPO_NAME}']
+  args: ['clone','https://github.com/ashutosh19021993/citest]
 
 # #Build the image 
 # - name: 'gcr.io/cloud-builders/docker'
