--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
 #First Clone from Google Cloud Source Repository  
-- name: 'gcr.io/cloud-builders/git'
+- name: 'gcr.io/$PROJECT_ID/git'
   args: ['clone','https://github.com/ashutosh19021993/citest.git']
 
 #Build the image 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','https://github.com/ashutosh19021993/citest.git','.']
+  args: ['build','-t', '--tag=Dockerfile',,'.']
 
 # #Push the image  
 # - name: 'gcr.io/cloud-builders/docker'
