--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
 
 #Build the image 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t', '--tag=Dockerfile',,'.']
+  args: ['build','-t', '--tag=Dockerfile','.']
 
 # #Push the image  
 # - name: 'gcr.io/cloud-builders/docker'
