--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,11 @@
+# steps:
+# #First Clone from Google Cloud Source Repository  
+# - name: 'gcr.io/$PROJECT_ID/git'
+#   args: ['clone','https://github.com/ashutosh19021993/citest.git']
 steps:
 #First Clone from Google Cloud Source Repository  
-- name: 'gcr.io/$PROJECT_ID/git'
-  args: ['clone','https://github.com/ashutosh19021993/citest.git']
+- name: 'gcr.io/ashutosh19021993/citest.git'
+  args: ['clone']
 
 # #Build the image 
 # - name: 'gcr.io/cloud-builders/docker'
