--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@
 #   args: ['clone','https://github.com/ashutosh19021993/citest.git']
 steps:
 #First Clone from Google Cloud Source Repository  
-- name: 'gcr.io/https://github.com/ashutosh19021993/citest.git'
+- name: 'gcr.io/ashutosh19021993/citest.git'
   args: ['clone']
 
 # #Build the image 
