--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,9 +10,9 @@ steps:
 - name: gcr.io/cloud-builders/git
   args: ['clone', 'https://github.com/ashutosh19021993/citest.git']
 
-# #Build the image 
-# - name: 'gcr.io/cloud-builders/docker'
-#   args: ['build','-t', '--tag=Dockerfile','.']
+#Build the image 
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build','-t', '--tag=Dockerfile','.']
 
 # #Push the image  
 # - name: 'gcr.io/cloud-builders/docker'
