--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,9 +14,9 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build','.']
 
-# #Push the image  
-# - name: 'gcr.io/cloud-builders/docker'
-#   args: ['push','gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}']
+#Push the image  
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push','gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}']
   
 # #Update the container image using kubectl set
 # - name: 'gcr.io/cloud-builders/kubectl'
